--- a/style.css
+++ b/style.css
@@ -103,8 +103,10 @@
       font-size: 20px;
     }
 
-    @media (max-width: 768px) {
-      .card-grid {
-        grid-template-columns: 1fr;
-      }
+   @media (max-width: 768px) {
+  .card-grid {
+    grid-template-columns: repeat(3, 1fr);
+  }
+}
+
     }
